# Network-Addon-Installer

./: .gitignore  .gitmodules  Cargo.toml  README.md  cleanup.txt  configuration.json  debug.ps1  debug.sh  elm-pipeline.yml  elm_compile.sh  elm_compile_opt.sh  installation.json  linux-pipeline.yml  mac-pipline.yml  release.sh  structure.json  win-pipeline.yml  win64-pipeline.yml
docs/: 1_Core.txt  2_Additional Network Features.txt  4_Automata Controller.txt  5_DataView Options.txt  6_Miscellaneous.txt  7_Texture and Drive Side Support.txt  8_Traffic Simulator.txt  z_NAM Controller_LHD.txt  z_NAM Controller_RHD.txt
docs/1_Core/: Locale Files.txt
docs/2_Additional Network Features/: Light Rail.txt  Maxis Highway.txt  Monorail.txt  Pedestrian Malls and Paths.txt  Rail (RealRailway).txt  RealHighway.txt  Road, One-Way Road, and Avenue.txt  Street.txt  Subway and FLUPs.txt  Water Transport.txt
docs/2_Additional Network Features/Light Rail/: Base Features.txt  Elevated Light Rail Bridges.txt  Elevated Light Rail Dual-Networking.txt  Ground Light Rail Extension.txt  Ground Light Rail.txt  High Elevated Light Rail Puzzle Pieces.txt
docs/2_Additional Network Features/Light Rail/Ground Light Rail Dual-Networking/: Light Rail Dual-Networking Bridges.txt
docs/2_Additional Network Features/Maxis Highway/: Default Style.txt  Maxis Highway Override (RHW-Style).txt
docs/2_Additional Network Features/Maxis Highway/Default Style/: Base Features.txt  Elevated Highway Bridges.txt  Ground Highway Bridges.txt
docs/2_Additional Network Features/Monorail/: Base Features.txt  High Elevated Monorail Puzzle Pieces.txt  High Speed Rail Project.txt  Monorail Bridges.txt
docs/2_Additional Network Features/RealHighway/: Bus Rapid Transit Support.txt  RHW Cosmetic Pieces.txt  RHW Double Decker Networks.txt  RHW Regional Transport Map Plugin.txt  RHW Small Networks and Ramps.txt  RHW Wider C-Type Networks.txt  RHW Wider S-Type Networks.txt  RealHighway Bridges.txt  Special Intersection Pieces.txt  a_Legacy Support.txt
docs/2_Additional Network Features/Road, One-Way Road, and Avenue/: Additional Widths and Turn Lanes.txt  Avenue Bridges.txt  Basde Features.txt  Elevated Viaducts.txt  Legacy Auto Avenue Turn Lanes.txt  Legacy Semi-Auto Road Turn Lanes.txt  One-Way Road Arrow Plugins.txt  Real Expressway.txt  Road Bridges.txt  Rural Roads Plugin.txt
docs/2_Additional Network Features/Road, One-Way Road, and Avenue/Additional Widths and Turn Lanes/: Additional Road Width Bridges.txt  (+1 more)
docs/2_Additional Network Features/Street/: Base Features.txt  Street Addon Mod.txt  Street Bridges.txt
docs/2_Additional Network Features/Subway and FLUPs/: Flexible Underpasses (FLUPs).txt
docs/2_Additional Network Features/Water Transport/: Canal Addon Mod.txt
elm/: Dockerfile  elm-analyse.json  elm.json
elm/src/: Main.elm
installation/: README.md  Version.toml
json_gen/: Cargo.toml
json_gen/src/: main.rs
server/: Cargo.toml
server/src/: files.rs  main.rs
src/: main.rs
static/: .gitignore  cleanup.txt  favicon.rgba  index.html.hbs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+2 files in other folders)
