[package]
name = "network-addon-installer"
version = "0.0.2"
authors = ["durfsurn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
warp = "0.2"
env_logger = "0.7"
handlebars = "3"
tokio = { version = "0.2", features = ["full"]}
log = "0.4.0"
walkdir = "2"
webbrowser = "0.5"
percent-encoding = "2"
rust-embed = { version = "5", features = ["compression"] }
os_info = "2.0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }