[package]
name = "network-addon-installer"
version = "0.0.10"
authors = ["durfsurn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
colored = "2"
directories = "3.0"
env_logger = "0.7"
handlebars = "3"
log = "0.4"
log4rs = "0.13"
nfd = "0.0.4"
os_info = "2.0"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "0.2", features = ["full"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2"
warp = "0.2"
webbrowser = "0.5"

rust-embed = { version = "5", features = ["compression"] }