[package]
name = "Network-Addon-Installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = { version = "*", features = ["tokio"] }
tokio = { version = "*", features = ["full"] }
rfd = "*"
anyhow = "*"
directories = "*"
os_info = "*"
zip = "*"
log = "*"
uuid = { version = "*", features = ["serde", "v4"] }
walkdir = "*"
